less margin in safe-email class to avoid overlapping

--- a/_sass/_pages.scss
+++ b/_sass/_pages.scss
@@ -29,7 +29,7 @@
     border-radius: 2px;
     background-color: $lightGray;
     margin: 1px;
-    padding: 2px;
+    padding: 1px;
   }
 }
 
